resource/css/trisoap.scss
/* ... */
.lp-image-background#lp-img-no-chemical {
	background-image: url(/resource/img/landingpage/no-chemical.jpg);
}

.lp-image-background#lp-img-long-time-develop {
	background-image: url(/resource/img/landingpage/long-time-develop.jpg);
}

.lp-image-background#lp-img-for-travel {
	background-image: url(/resource/img/landingpage/for-travel.jpg);
}

.lp-image-background#lp-img-foam-fest {
	background-image: url(/resource/img/landingpage/foam-fest.jpg);
}

.lp-image-background#lp-img-natural-oil {
	background-image: url(/resource/img/landingpage/natural-oil.jpg);
}

.lp-image-background#lp-img-easy-to-carry {
	background-image: url(/resource/img/landingpage/easy-to-carry.jpg);
}

.lp-image-background#lp-img-essential-oil {
	background-image: url(/resource/img/landingpage/essential-oil.jpg);
}

.lp-image-background#lp-img-welfare-produce-together {
	background-image: url(/resource/img/landingpage/welfare-produce-together.jpg);
}

.lp-image-background#lp-img-multiple-uses {
	background-image: url(/resource/img/landingpage/multiple-uses.jpg);
}

.lp-image-background#lp-img-teng-partner {
	background-image: url(/resource/img/landingpage/teng-partner.jpg);
}

.lp-image-background#lp-img-cold-pro {
	background-image: url(/resource/img/landingpage/cold-pro.jpg);
}

.lp-image-background#lp-img-listen-to-earth {
	background-image: url(/resource/img/landingpage/listen-to-earth.jpg);
}

.lp-image-background#lp-img-retarded-produce-together {
	background-image: url(/resource/img/landingpage/retarded-produce-together.jpg);
}

.lp-image-background#lp-img-media-report {
	background-image: url(/resource/img/landingpage/media-report.jpg);
}

.lp-content-left {
	text-align: left;
	&.lp-text-opposite-side {
		.lp-title,
		.lp-subtitle,
		.lp-text {
			text-align: right;
		}
	}
}

.lp-content-right {
	text-align: right;
	&.lp-text-opposite-side {
		.lp-title,
		.lp-subtitle,
		.lp-text {
			text-align: left;
		}
	}
}

@media screen and (max-width: $media-breakpoint-mobile) {
	.lp-section,
	[class^=lp-text-cover] {
		& > .lp-text > br {
			display: none;
		}
	}

	[class^=lp-content] .lp-text,
	.lp-content-right .lp-text,
	.lp-content-left.lp-text-opposite-side .lp-text {
		text-align: left;
	}
}

.lp-plain-text {
	text-align: center;
	&.lp-content-left {
		text-align: left;
	}
	&.lp-content-right {
		text-align: right;
	}

	.lp-title {
		color: $lp-orange;
	}

	.lp-subtitle,
	.lp-text {
		color: $main-font-color;
	}

	.lp-text.lp-bg-orange {
		padding: 2em;
		color: #fff;
	}
}

.lp-text-list .lp-text {
	margin-left: 10%;
	text-align: left;
	&::before {
		content: '';
		display: inline-block;
		width: 1em;
		height: 1em;
		margin-right: 0.5em;
		border: 2px solid $lp-orange;
		border-radius: 1em;
		background-color: transparent;
	}
}

.lp-interlaced-text {
	// Laptop
	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
		.lp-title,
		.lp-text:nth-child(odd) {
			text-align: left;
		}

		.lp-title:last-child,
		.lp-text:nth-child(even) {
			text-align: right;
		}
	}
}

.lp-classic-border {
	border: 3px #fff solid;
	box-sizing: border-box;
	padding: 32px;
	text-align: right;

	.lp-title,
	.lp-text {
		text-align: center;
	}
}

.lp-certificate {
	background-color: $lp-yellow;
	color: #fff;

	.trisoap-logo {
		@extend .full-width-img;
	}

	.lp-round {
		width: 16em;
		height: 16em;
		text-align: left;
		color: $lp-yellow;

		@media screen and (max-width: 19.04em) {
			// 16em / (100 - 8 * 2)% * 100% ~= 19.04em
			display: none;
		}

		.lp-title {
			position: relative;
			margin: 0.4em 2em 0.4em 0;

			&::after {
				content: '';
				position: absolute;
				width: 370%;
				left: 0;
				bottom: 0;
				border-bottom: 1px solid $lp-yellow;

			}
		}

		.lp-text {
			margin: 0;
		}
	}

	// Laptop
	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
		display: flex;
		justify-content: space-around;
	}

	// Mobile
	@media screen and (max-width: $media-breakpoint-mobile) {
		.trisoap-logo {
			display: none;
		}
	}
}

.lp-certificate-content {
	// Laptop
	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
		display: grid;
		grid-template-columns: auto 16em;
		grid-template-rows: auto auto;
		align-items: center;
		width: 80%;

		& > .lp-title {
			grid-column: 1 / 3;
			grid-row: 1 / 2;
			margin: 0;
		}

		& > .lp-text {
			grid-column: 1 / 2;
			grid-row: 2 / 3;
			margin: 1em 1em 1em 0;
		}

		.lp-round {
			grid-column: 2 / 3;
			grid-row: 2 / 3;
		}
	}

	// Mobile
	@media screen and (max-width: $media-breakpoint-mobile) {
		text-align: center;

		.lp-round {
			margin: 0 auto;
		}
	}
}

#lp-three-elements {
	& > .lp-title {
		color: #fff;
		text-align: center;
	}

	// Laptop
	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
		border-spacing: 4em;

		[class^=lp-text-cover] {
			display: table-cell;
			width: 20%;
		}
	}

	// Mobile
	@media screen and (max-width: $media-breakpoint-mobile) {
		[class^=lp-text-cover] {
			margin: 2em 0;
		}
	}
}

#lp-three-insistence > .lp-title {
	color: #fff;
	text-align: center;
}

.lp-three-rounds {
	.lp-round {
		justify-content:center;

		// Laptop
		@media screen and (min-width: $media-breakpoint-mobile + 1px) {
			.lp-title {
				font-size: 32px;
			}

			.lp-text {
				font-size: 18px;
			}
		}

		@media screen and (min-width: 768px) and (max-width: $media-breakpoint-mobile) {
			.lp-title {
				font-size: 24px;
			}

			.lp-text {
				font-size: 14px;
			}
		}

		// Mobile
		@media screen and (max-width: 533px) {
			.lp-title {
				font-size: 32px;
			}

			.lp-text {
				font-size: 18px;
			}
		}
	}

	// Laptop
	@media screen and (min-width: 768px) {
		display: flex;
		justify-content: space-around;

		.lp-round {
			width: 25vw;
			height: 25vw;
		}
	}

	// Mobile
	@media screen and (max-width: 767px) {
		.lp-round {
			width: 75vw;
			height: 75vw;
			margin: 2em auto;
		}
	}
}

.lp-cta .add-to-cart-link {
	display: inline-block;
	margin-top: 1em;

	.cart-icon {
		width: 72px;
	}
}
/* ... */

